@@ -91,7 +91,7 @@ TESTS = run-arextract.sh run-arsymtest.sh newfile test-nlist \
 	run-disasm-x86.sh run-disasm-x86-64.sh \
 	run-early-offscn.sh run-dwarf-getmacros.sh \
 	run-dwarfcmp-self.sh run-dwarflint-self.sh run-dwarf-attributes.sh \
-	dwarf_edit
+	run-dwarf_edit.sh
 # run-show-ciefde.sh
 
 if !STANDALONE
@@ -126,7 +126,7 @@ EXTRA_DIST = run-arextract.sh run-arsymtest.sh \
 	     run-dwfl-addr-sect.sh run-early-offscn.sh \
 	     run-dwarf-getmacros.sh \
 	     run-dwarfcmp-self.sh run-dwarflint-self.sh \
-	     run-dwarf-attributes.sh \
+	     run-dwarf-attributes.sh run-dwarf_edit.sh \
 	     testfile15.bz2 testfile15.debug.bz2 \
 	     testfile16.bz2 testfile16.debug.bz2 \
 	     testfile17.bz2 testfile17.debug.bz2 \
